# Dino-Runner

./: .gitignore  README.md  pyproject.toml
dino_runner/: Bot.py  FrameProcessor.py  ScreenRecorder.py  __init__.py
src/: Bot.py  FrameProcessor.py  ScreenRecorder.py  main.py  setup_chrome_macro.py
src/keyboard_interactions/: setup_chrome_macro.py
src/screen_recorder/: ScreenRecorder.py
src/utils/: fix_dpi_scaling.py
