[project]
name = "dino-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pygetwindow>=0.0.9",
]
[tool.setuptools]
packages = ["dino_runner"]
